# 26_wuren_yidaliang

./: CBAM_学习笔记.md  README.md  setup.sh
CMake 1/: CMakeLists.txt
CMake 1/modules/A1/: CMakeLists.txt
CMake 1/modules/M2/: CMakeLists.txt
CMake_Test/: CMakeLists.txt
CMake_Test/CMake 1/common/kalman/: CMakeLists.txt
CMake_Test/CMake 1/common/math/: CMakeLists.txt
CMake_Test/CMake 1/modules/A2/: CMakeLists.txt
CMake_Test/CMake 1/modules/M1/: CMakeLists.txt
homework1/: README.md  setup.sh
homework1/linux_practice/docs/: daily_report.txt
linux_practice/docs/: daily_report.txt
第三次培训的作业/: DeepLearning.md  README.md  net.py  test.py
第三次培训的作业/pth/: model_best_100.00.pth  model_best_24.42.pth  model_best_38.25.pth  model_best_40.55.pth  model_best_43.78.pth  model_best_44.24.pth  model_best_51.15.pth  model_best_55.30.pth  model_best_55.76.pth  model_best_58.99.pth  model_best_61.29.pth  model_best_62.21.pth  model_best_63.13.pth  model_best_65.44.pth  model_best_67.28.pth  model_best_68.66.pth  model_best_71.43.pth  model_best_71.89.pth  model_best_75.58.pth  model_best_79.72.pth  model_best_81.11.pth  model_best_82.03.pth  model_best_84.79.pth  model_best_88.02.pth  model_best_88.48.pth  model_best_89.40.pth  model_best_89.86.pth  model_best_91.71.pth  model_best_92.17.pth  model_best_92.63.pth  model_best_93.55.pth  model_best_94.01.pth  model_best_94.47.pth  model_best_94.93.pth  model_best_95.39.pth  model_best_95.85.pth  model_best_96.31.pth  model_best_96.77.pth  model_best_97.24.pth  model_best_97.70.pth  (+4 more)
第二次培训的作业/: README.md
第二次培训的作业/homework1/: README.md  SA.py
第二次培训的作业/homework2/: README.md  linear_regression_no_reg.ipynb  linear_regression_with_reg.ipynb
第二次培训的作业/homework3/: README.md  SVM.ipynb
第二次培训的作业/homework4/: Kmeans_Exp.ipynb  README.md
第四次培训的作业/: README.md  很乱，整理好的学习笔记在README里面.txt
第四次培训的作业/ros2_homework_advanced_ws/: README.md
第四次培训的作业/ros2_homework_advanced_ws/.marscode/: deviceInfo.json
第四次培训的作业/ros2_homework_advanced_ws/install/: local_setup.sh  setup.sh
第四次培训的作业/ros2_homework_advanced_ws/install/fsd_common_msgs/share/fsd_common_msgs/: local_setup.sh  package.dsv  package.sh
第四次培训的作业/ros2_homework_advanced_ws/install/fsd_common_msgs/share/fsd_common_msgs/cmake/: export_fsd_common_msgs__rosidl_generator_cExport-noconfig.cmake  export_fsd_common_msgs__rosidl_generator_cExport.cmake  export_fsd_common_msgs__rosidl_generator_cppExport.cmake  export_fsd_common_msgs__rosidl_generator_pyExport-noconfig.cmake  export_fsd_common_msgs__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_fsd_common_msgs__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  fsd_common_msgs__rosidl_typesupport_cppExport-noconfig.cmake  (+2 more)
第四次培训的作业/ros2_homework_advanced_ws/install/map_to_visualize/share/map_to_visualize/: local_setup.dsv  local_setup.fish  local_setup.sh  package.bash  package.dsv  package.sh  package.zsh
第四次培训的作业/ros2_homework_advanced_ws/log/: latest_build
第四次培训的作业/ros2_homework_advanced_ws/src/fsd_common_msgs/msg/: CarStateDt.msg
第四次培训的作业/ros2_homework_advanced_ws/src/map_to_visualize/: CMakeLists.txt
第四次培训的作业/ros2_homework_advanced_ws/src/map_to_visualize/src/: map_visualizer.cpp
第四次培训的作业/ros2_homework_basic_ws/: README.md
第四次培训的作业/ros2_homework_basic_ws/install/: local_setup.sh  setup.sh
第四次培训的作业/ros2_homework_basic_ws/install/ros2_homework_basic_package/lib/ros2_homework_basic_package/: eight_figure_node
第四次培训的作业/ros2_homework_basic_ws/install/ros2_homework_basic_package/share/ros2_homework_basic_package/: local_setup.sh  package.dsv  package.sh
第四次培训的作业/ros2_homework_basic_ws/log/: latest_build
第四次培训的作业/ros2_homework_basic_ws/src/ros2_homework_basic_package/: CMakeLists.txt  package.xml
第四次培训的作业/ros2_homework_basic_ws/src/ros2_homework_basic_package/config/: trajectory_params.yaml
第四次培训的作业/ros2_homework_basic_ws/src/ros2_homework_basic_package/src/: eight_figure_node.cpp
(+213 files in other folders)
